Styling the calculator

--- a/style.css
+++ b/style.css
@@ -1,4 +1,14 @@
 body {
-  margin: 0;
+  margin: 20px;
   font-family: "Courier New", Courier, monospace;
+}
+
+input[type="number"] {
+  padding: 5px 8px;
+}
+
+select {
+  font-size: 20px;
+  padding: 1px 0;
+  text-align: center;
 }
